Fix audio: use baby-dance.mp3

--- a/index.html
+++ b/index.html
@@ -195,7 +195,7 @@
   </section>
 
   <audio id="dooron-audio" preload="auto">
-    <source src="Baby Dance Slowly Slowly  Sunil Grover  Priyanka Chopra  The Kapil Sharma Show - 9xm Stylish kinG.mp3" type="audio/mpeg">
+    <source src="baby-dance.mp3" type="audio/mpeg">
   </audio>
   <script src="https://cdn.jsdelivr.net/npm/canvas-confetti@1.9.2/dist/confetti.browser.min.js"></script>
   <script src="script.js"></script>
